--- a/Part 3/agenda-tel/package.json
+++ b/Part 3/agenda-tel/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "cd \"Curso_FullStack/Part 2/agenda-tel\" && npm install && npm run build && cp -r dist \"../../../Curso_FullStack/Part 3/agenda-tel/public\""
+    "build:ui": "cd ../../Part\\ 2/agenda-tel && npm install && npm run build && cp -r dist public"
 
   },
   "author": "Matti Luukkainen",
